# haetae_oakland

./: CMakeLists.txt  README.md
benchmark/: speed.c
helper_scripts/: HAETAE_security_estimates.py  N_lower_bound.py  README.md  compute_table_rans.py  gamma_estimate.mw
helper_scripts/sub_procedures/: compute_gamma.py  entropy_coordinate_hyperball.py  gamma_Estimator.py  qlist.py  tau_computer.py
include/: crt.h  encoding.h  fft.h  fp.h  packing.h  params.h  poly.h  polyfix.h  polymat.h  polyvec.h  reduce.h  rounding.h  sampler.h  symmetric.h
py_codes/: README.md  bounds.py
py_codes/ntt/: ntt_tablegen.py  primitive_root.py
py_codes/pack/: pack_codegen.py
py_codes/plot_distribution/: plot_gaussian.py  plot_hyperball_radius.py  plot_uniformdbl.py  plot_z_radius.py
py_codes/ziggurat/: binsearch_x1.py  tablegen.py  ziggurat.py
src/: crt.c  encoding.c  fft.c  fftest.c  fp.c  ntt.c  packing.c  poly.c  polyfix.c  polymat.c  polyvec.c  reduce.c  rounding.c  sampler.c  sign.c  sort.c  symmetric-aes.c  symmetric-blake.c  symmetric-shake.c
test/: CMakeLists.txt  UnitTest.cpp  distribution.c  fft_test.c  main.c  test.c
